--- a/entries/08122025.html
+++ b/entries/08122025.html
@@ -35,7 +35,52 @@
 <p>CSS is also a thing I must learn for a webpage. So till now I know these:
 <ul>
 	<li>css can reset browser defaults, margin=0</li>
-	<li>
+	<li>set global styles for the entire page:
+	body {
+    		font-family: Arial;
+    		background-color: #f7f7f7;
+    		color: #222;
+					}</li>
+	<li>navigation bars are styled: 
+	nav {
+    		background-color: #333;
+    		padding: 10px;
+		}</li>
+	<li>style links:
+	nav a {
+    		color: white;
+    		text-decoration: none;
+		}
+		
+		</li>
+	<li>:hover pseudo-class:
+	nav a:hover {
+    		color: #ffd700;
+			}
+	This changes styles when the mouse moves over the element.</li>
+	<li>.class selector works:
+	.container {
+		    max-width: 800px;
+		    margin: auto;
+		    padding: 20px;
+			}
+	It is applied to elements using class="..." and can be reused again.</li>
+	<li>CSS can control layout width:
+	max-width: 800px;</li>
+	<li>centers an element horizontally:
+	margin: auto;</li>
+	<li>CSS can set background color for specific sections.</li>
+	<li>CSS can change fonts of specific elements:
+	h1, h2 {
+    font-family: "Georgia", serif;
+}
+</li>
+	
+</ul>]>
+
+
+
+
 </div>
 </div>
 </body>
