--- a/entries/08122025.html
+++ b/entries/08122025.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>08-12-2025 Day1</title>
+	<title>08-12-2025 Anfangen</title>
 	<link rel="stylesheet" href="../style.css">
 </head>
 
@@ -76,7 +76,7 @@
 }
 </li>
 	
-</ul>]>
+</ul>
 
 
 
