10-12-2025 update and vocab section V1

--- a/entries/09122025.html
+++ b/entries/09122025.html
@@ -23,5 +23,18 @@ I need it definitely!!!</p>
 
 </div>
 </div>
+ <div class="layout">
+        <aside class="sidebar-box">
+            <h2>📚 Deutsch Vocab</h2>
+            <div class="vocab">
+                <ul>
+                    <li><strong>Wort</strong> — word</li>
+                    <li><strong>Schön</strong> — beautiful</li>
+                    <li><strong>Verstehen</strong> — to understand</li>
+                </ul>
+            </div>
+        </aside>
+
+    </div> <!-- end .layout -->
 </body>
 </html>
